# Microscale-labs

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  jupytext.toml  justfile  pyproject.toml
.github/workflows/: sync-notebooks.yml  test-labs.yml
docs/superpowers/plans/: 2026-04-11-microscale-labs-foundation.md
labs/01-token-tax/: README.md  lab.py
labs/02-attention-microscope/: README.md  lab.py
labs/03-build-a-transformer/: README.md  lab.py
labs/04-model-autopsy/: README.md  lab.py
labs/05-dollar-pretraining/: README.md  lab.py
labs/06-hallucination-probe/: README.md  lab.py
labs/07-a-lora-behavioral/: README.md  data.py  lab.py
labs/07-b-lora-tool-calling/: README.md  data.py  lab.py
labs/07-lora-from-scratch/: README.md  data.py  lab.py
labs/08-dpo-alignment/: README.md  lab.py
labs/09-quantize-it-yourself/: README.md  lab.py
labs/10-roofline-lab/: README.md  lab.py
labs/11-kv-cache-calculator/: README.md  lab.py
microscale/: __init__.py  attention.py  autopsy.py  cache.py  device.py  env.py  lora.py  metrics.py  models.py  quantize.py  style.mplstyle  tiny_gpt.py  transformer_block.py  viz.py
microscale/datasets/: __init__.py  cooking_preferences.py
notebooks/: 01-token-tax.ipynb  02-attention-microscope.ipynb  03-build-a-transformer.ipynb  04-model-autopsy.ipynb  05-dollar-pretraining.ipynb  06-hallucination-probe.ipynb  07-a-lora-behavioral.ipynb  07-b-lora-tool-calling.ipynb  08-dpo-alignment.ipynb  09-quantize-it-yourself.ipynb  10-roofline-lab.ipynb  11-kv-cache-calculator.ipynb
tests/: test_attention.py  test_device.py  test_env.py  test_metrics.py  test_models.py  test_transformer_block.py  test_viz.py
