[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "microscale"
version = "0.1.0"
description = "Microscale ML educational labs"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "torch>=2.2",
    "transformers>=4.40",
    "safetensors>=0.4",
    "huggingface-hub>=0.24",
    "tiktoken>=0.8",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
    "rich>=13.7",
    "tqdm>=4.66",
    "datasets>=3.0",
    "openai>=1.30",
]

[project.optional-dependencies]
apple = [
    "mlx>=0.20",
    "mlx-lm>=0.20",
]
inference = [
    "llama-cpp-python>=0.3",
]
notebooks = [
    "jupyterlab>=4.2",
    "jupytext>=1.16",
    "ipywidgets>=8.1",
]
dev = [
    "pytest>=8.0",
    "nbmake>=1.5",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "nbstripout>=0.7",
    "jupytext>=1.16",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"labs/*/lab.py" = ["E402", "F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
