[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "microscale"
version = "0.1.0"
description = "Microscale ML educational labs"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "transformers>=4.40",
    "safetensors>=0.4",
    "huggingface-hub>=0.24",
    "tiktoken>=0.8",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
    "rich>=13.7",
    "tqdm>=4.66",
    "datasets>=3.0",
    "openai>=1.30",
    "python-dotenv>=1.0",
]

# ─── PyTorch platform extras ─────────────────────────────
# torch is NOT in core deps — pick ONE of these based on your platform:
#
#   Mac / CPU-only:   uv sync --extra cpu     (or just: just setup)
#   Linux + NVIDIA:   uv sync --extra cu124   (or just: just setup-cuda)
#
[project.optional-dependencies]
cpu = ["torch>=2.2"]
cu124 = ["torch>=2.2"]
cu126 = ["torch>=2.2"]
apple = ["mlx>=0.20", "mlx-lm>=0.20"]
inference = ["llama-cpp-python>=0.3"]
notebooks = ["jupyterlab>=4.2", "jupytext>=1.16", "ipywidgets>=8.1"]
dev = [
    "pytest>=8.0",
    "nbmake>=1.5",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "nbstripout>=0.7",
    "jupytext>=1.16",
]

# ─── uv: PyTorch index routing ───────────────────────────
# cpu/cu124/cu126 are mutually exclusive — uv resolves torch
# from the correct index based on which extra you choose.
[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu124" },
        { extra = "cu126" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", extra = "cu124" },
    { index = "pytorch-cu126", extra = "cu126" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

# ─── Tool config ─────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"labs/*/lab.py" = ["E402", "F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
